@@ -1,3 +1,5 @@
+2006/5/2 -- released version 20060502_trunk
+
 2006/5/1 -- released version 20060501_trunk
 
 2006/4/30 -- released version 20060430_trunk
